# bulletproofs-plus

./: .gitignore  .license.ignore  .versionrc.json  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  lints.toml  test_coverage.sh
.github/workflows/: benchmark.yml  benchmark.yml.off  check_licence.yml  ci.yml  clippy-check.yml  source-cov.yml  test.yml
benches/: generators.rs  range_proof.rs
docs/: notes-on-optimization.md
docs/assets/: Benchmarks - BP vs BP+.xlsx
docs/quarkslab-audit/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: proofs.rs
scripts/: cargo-version-updater.js  file_license_check.sh
src/: commitment_opening.rs  errors.rs  extended_mask.rs  generators.rs  hidden.rs  inner_product_round.rs  lib.rs  range_parameters.rs  range_proof.rs  range_statement.rs  range_witness.rs  ristretto.rs  scalar_protocol.rs  traits.rs  transcript.rs  transcript_protocol.rs  transcripts.rs  utils.rs
src/generators/: aggregated_gens_iter.rs  bulletproof_gens.rs  generators_chain.rs  mod.rs  pedersen_gens.rs
src/protocols/: curve_point_protocol.rs  mod.rs  ristretto_point_protocol.rs  scalar_protocol.rs  transcript_protocol.rs
src/utils/: generic.rs  mod.rs  non_debug.rs  nullrng.rs  rng.rs
supply-chain/: audits.toml  config.toml
tests/: main_test.rs  ristretto.rs
