[package]
name = "tari_bulletproofs_plus_fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tari_bulletproofs_plus]
path = ".."

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "proofs"
path = "fuzz_targets/proofs.rs"
test = false
doc = false
